--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "qw75-syntax",
+  "name": "เว็ปโต๊ด เว็บหวยออนไลน์ มีหวยให้เล่นครบทุกชนิด ✔️ ❤️ ♕",
   "theme": "syntax",
   "version": "0.2.0",
   "description": "เว็ปโต๊ด✔️ ❤️ ♕ เว็บหวยออนไลน์ มีหวยให้เล่นครบทุกชนิด ตลอด 24 ชั่วโมง",
